# project

Arduino/231225/: pio.txt
Arduino/231225/uartConsole/: main.c  uartConsole.h
Arduino/231225/uartConsole-win/: hex_uart.c  hex_uart.h  hex_uart.ino  user_function.c
AudioPlayer/: CMakeLists.txt  main.cpp  readme.md
AudioPlayer/alsa/: CMakeLists.txt  alsaOut.cpp  alsaOut.h  note.md
AudioPlayer/libmad/: CMakeLists.txt  readme.md
AudioPlayer/libwave/: CMakeLists.txt  wave.cpp  wave.h
AudioPlayer/mlog/: mlog-test.c  mlog.h
AudioPlayer/player/: decoderImp.h  mp3Decoder.cpp  mp3Decoder.h  player.cpp  player.h  wavDecoder.cpp  wavDecoder.h
ImageProcess/bgra2rgb/: README.md  main.c
ImageProcess/rgb2nv12/: README.md  main.c
